@@ -27,6 +27,7 @@ PARAMSET_KEY_VALUES = "VALUES"
 HH_EVENT_DELETE_DEVICES = "deleteDevices"
 HH_EVENT_DEVICES_CREATED = "devicesCreated"
 HH_EVENT_ERROR = "error"
+HH_EVENT_HUB_CREATED = "hubCreated"
 HH_EVENT_LIST_DEVICES = "listDevices"
 HH_EVENT_NEW_DEVICES = "newDevices"
 HH_EVENT_RE_ADDED_DEVICE = "readdedDevice"
